src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-return-type-is-anon.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-return-type-is-anon.rs:7:5
   |
LL |   fn foo<'a>(&self, x: &i32) -> &i32 {
   |                        ----     ----
   |                        |
   |                        this parameter and the return type are declared with different lifetimes...
LL |     x
   |     ^ ...but data from `x` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |   fn foo<'a>(&'a self, x: &'a i32) -> &i32 {
   |               ++           ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
